<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivtity">

    <TextView
        android:id="@+id/txt_register_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/Sign_up"
        android:textSize="@dimen/sign_up_text_sign"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btGoogle"
        android:layout_width="67dp"
        android:layout_height="62dp"
        android:layout_marginTop="264dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/Sign_up"
        android:onClick="signInGoogleOnClick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_register_title"
        app:srcCompat="@mipmap/google_logo" />

    <TextView
        android:id="@+id/txt_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_border_margin"
        android:layout_marginTop="8dp"
        android:text="@string/Email"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_register_title" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="352dp"
        android:layout_height="58dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_email" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="352dp"
        android:layout_height="58dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtEmail" />

    <Button
        android:id="@+id/btSignUp"
        android:layout_width="152dp"
        android:layout_height="53dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="12dp"
        android:onClick="signUpOnClick"
        android:text="@string/Sign_up"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtPassword" />

    <Button
        android:id="@+id/btSignIn"
        android:layout_width="147dp"
        android:layout_height="53dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="40dp"
        android:onClick="signInOnClick"
        android:text="@string/Sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>