<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_border_margin"
        android:layout_marginTop="@dimen/medium_border_margin"
        android:text="@string/app_name"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/ib_Profile"
        android:layout_width="72dp"
        android:layout_height="69dp"
        android:adjustViewBounds="true"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/Profile"
        android:scaleType="fitCenter"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_tasks"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/small_border_margin"
        android:layout_marginTop="@dimen/small_border_margin"
        android:layout_marginEnd="@dimen/small_border_margin"
        android:layout_marginBottom="@dimen/small_border_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_title"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_task"
        android:layout_width="@dimen/button_size"
        android:layout_height="@dimen/button_size"
        android:layout_marginEnd="@dimen/medium_border_margin"
        android:layout_marginBottom="@dimen/medium_border_margin"
        android:backgroundTint="@color/white"
        android:clickable="true"
        android:contentDescription="@string/Add_a_task"
        android:focusable="true"
        android:onClick="goToAddCard"
        app:fabCustomSize="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:shapeAppearance="@style/FabShape"
        app:srcCompat="@drawable/ic_add_task"
        app:tint="@color/black" />

</androidx.constraintlayout.widget.ConstraintLayout>